--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,11 +1,39 @@
-<!-- list_group.xml -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listGroup"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:paddingStart="30dp"
-    android:textSize="20sp"
-    android:textColor="@color/black"
-    android:ellipsize="end"
-    android:singleLine="true"
-    android:gravity="center_vertical" />
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:background="@color/primary_light"
+    android:padding="16dp"
+    android:layout_margin="4dp"
+    android:gravity="center_vertical">
+
+    <!-- Category Icon -->
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_inventory"
+        android:layout_marginEnd="12dp"
+        app:tint="@color/primary_dark" />
+
+    <!-- Category Name -->
+    <TextView
+        android:id="@+id/listGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/primary_dark"
+        android:ellipsize="end"
+        android:singleLine="true" />
+
+    <!-- Expand/Collapse Indicator -->
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_expand_more"
+        app:tint="@color/primary_dark" />
+
+</LinearLayout>
